tests/paczka1/fuzzy1/26143783.err
Error in line 1: fzQdZI A150 85,1
Error in line 4: LA7TWg A282 83,8
Error in line 18: S102 S367 65,6
Error in line 20: S102 A282 100,0
Error in line 14: pnTVe S367 32,0
Error in line 38: pnTVe A282 57,5
